mass update for production, maintenance and stock

--- a/tools_box/logistics/report/vehicle_allocation_schedule_report/vehicle_allocation_schedule_report.html
+++ b/tools_box/logistics/report/vehicle_allocation_schedule_report/vehicle_allocation_schedule_report.html
@@ -1,4 +1,3 @@
-{%= frappe.boot.letter_heads["Standard Letterhead"] %}
 {%
 	if (report.columns.length > 10) {
 		frappe.throw(__("Too many columns. Export the report and print it using a spreadsheet application."));
@@ -45,7 +44,12 @@
 				{% for(var i=1, l=report.columns.length; i<l; i++) { %}
 					<td class="text-left">
 						{% var fieldname = report.columns[i].field; %}
-                                                                {%= row[fieldname] %}
+                        {% if (fieldname == "Total"){ %}
+                        {%= format_currency(row[fieldname])  %}
+                        {%} else{ %}
+                        {%= row[fieldname] %}
+                        {% } %}
+
 					</td>
 				{% } %}
 			</tr>
